<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="senior_project.foodscanner.activities.Painting">

    <SeniorProject.foodscanner.paintingView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/paintingView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pixelButton"
        android:id="@+id/pixelButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible" />

    <SeniorProject.foodscanner.DrawView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rectangleView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rectangleButton"
        android:id="@+id/rectangleButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/paintingView"
        android:layout_alignEnd="@+id/paintingView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/undoButton"
        android:id="@+id/undoButton"
        android:visibility="invisible"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/paintingView"
        android:layout_alignEnd="@+id/paintingView" />

</RelativeLayout>
