<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/hour_format_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="72dp"
        android:paddingLeft="16sp"
        android:paddingRight="16dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:clickable="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/Text.Primary"
                android:text="@string/settings_24_hour" />

            <TextView
                android:id="@+id/hour_format_example"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/Text.Secondary"/>

        </LinearLayout>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/hour_format_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:clickable="false"
            android:focusable="false"
            android:background="@null"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Divider"/>



    <LinearLayout
        android:id="@+id/manual_meal_time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="72dp"
        android:paddingLeft="16sp"
        android:paddingRight="16dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:clickable="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/Text.Primary"
            android:text="@string/settings_meal_time" />

        <TextView
            android:id="@+id/meal_time_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/Text.Secondary"
            android:text="@string/settings_meal_time_automatic"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Divider"/>


    <LinearLayout
        android:id="@+id/logout_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="72dp"
        android:paddingLeft="16sp"
        android:paddingRight="16dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:clickable="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/Text.Primary"
            android:text="@string/action_logout" />

        <TextView
            android:id="@+id/logout_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/Text.Secondary"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Divider"/>

</LinearLayout>