<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/manual_time_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="72dp"
            android:paddingLeft="16sp"
            android:paddingRight="16dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:clickable="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingRight="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/Text.Primary"
                    android:text="@string/settings_time_switch_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/Text.Secondary"
                    android:text="@string/settings_time_switch_subtitle"/>

            </LinearLayout>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/manual_time_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:background="@null"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="16dp"
                android:textColor="@color/Accent"
                android:textStyle="bold"
                android:text="@string/breakfast"/>

            <ImageView
                android:id="@+id/breakfast_overlap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_error_outline_black"
                android:contentDescription="@string/accessibility_meal_time_overlap"
                android:visibility="gone"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/breakfast_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="72dp"
            android:paddingLeft="16sp"
            android:paddingRight="16dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/breakfast_start_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/Text.Primary"
                android:text="@string/settings_set_start_time" />

            <TextView
                android:id="@+id/breakfast_start_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/Text.Secondary"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Divider"/>

        <LinearLayout
            android:id="@+id/breakfast_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="72dp"
            android:paddingLeft="16sp"
            android:paddingRight="16dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/breakfast_end_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/Text.Primary"
                android:text="@string/settings_set_end_time" />

            <TextView
                android:id="@+id/breakfast_end_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/Text.Secondary"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="16dp"
                android:textColor="@color/Accent"
                android:textStyle="bold"
                android:text="@string/lunch"/>

            <ImageView
                android:id="@+id/lunch_overlap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_error_outline_black"
                android:contentDescription="@string/accessibility_meal_time_overlap"
                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lunch_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="72dp"
            android:paddingLeft="16sp"
            android:paddingRight="16dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lunch_start_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/Text.Primary"
                android:text="@string/settings_set_start_time" />

            <TextView
                android:id="@+id/lunch_start_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/Text.Secondary"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Divider"/>

        <LinearLayout
            android:id="@+id/lunch_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="72dp"
            android:paddingLeft="16sp"
            android:paddingRight="16dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lunch_end_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/Text.Primary"
                android:text="@string/settings_set_end_time" />

            <TextView
                android:id="@+id/lunch_end_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/Text.Secondary"/>

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="16dp"
                android:textColor="@color/Accent"
                android:textStyle="bold"
                android:text="@string/dinner"/>

            <ImageView
                android:id="@+id/dinner_overlap"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_error_outline_black"
                android:contentDescription="@string/accessibility_meal_time_overlap"
                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dinner_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="72dp"
            android:paddingLeft="16sp"
            android:paddingRight="16dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dinner_start_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/Text.Primary"
                android:text="@string/settings_set_start_time" />

            <TextView
                android:id="@+id/dinner_start_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/Text.Secondary"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Divider"/>

        <LinearLayout
            android:id="@+id/dinner_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="72dp"
            android:paddingLeft="16sp"
            android:paddingRight="16dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dinner_end_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/Text.Primary"
                android:text="@string/settings_set_end_time" />

            <TextView
                android:id="@+id/dinner_end_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/Text.Secondary"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Divider"/>

    </LinearLayout>

</ScrollView>